--- a/style.css
+++ b/style.css
@@ -6,12 +6,14 @@
     padding: 0;
     box-sizing: border-box;
 }
-
-
-img {
+.barra li a {
+    color: #be96dd;
+}
+#img-titulo {
     height: 400px;
     width: 400px;
 }
+
 .encabezado {
     display: flex;
     flex-direction: row;
@@ -22,8 +24,14 @@ img {
     align-items: flex-start;
     justify-content: center;
     background-color: #be96dd;
-
-    
+}
+.modos {
+    color: #080659;
+    display: flex;
+    justify-content: end;
+    gap: .5em;
+    margin-top: 1em;
+    margin-right: 2em;
 }
 h1 {
     margin: 25px 50px;
@@ -33,26 +41,154 @@ h1 {
 }
 button {
     margin: 25px 50px;
-    padding: 7px 5px 7px 5px;
+    padding: 7px 10px 7px 10px;
     border-radius: 20px;
     color: white;
     text-shadow: 2px 2px 4px #080659;
     font-family: Major Mono Display;
     background-color: #be96dd;
-
+}
+.btn-descarga {
+    color: white;
 }
 h2 {
     color: #080659;
     text-shadow: 2px 2px 4px #be96dd;
     font-family: Major Mono Display;
-    margin: 25px 50px;
-}
-p {
-    margin: 20px;
+    margin-top: 90px;
+    margin-bottom: 90px;
+    text-align: center;
 }
 
+p {
+    margin: 40px;
+}
+
+.carrusel {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#slidefotos {
+    width: 20%;
+}
+.button {
+    color: #6beef7dc;
+}
+.sobreMi {
+    display: flex;
+    justify-content: center;
+}
+.sobre-mi {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.proyectos {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 3em;
+}
+
+
+.contenedor-card {
+    background: white;
+    position: relative;
+    object-fit: cover;
+    overflow: hidden;
+    font-size: 14px;
+    width: 60%;
+}
+.print-maria {
+    object-fit: cover;
+    display: block;
+    transition: all 1s;
+    filter: grayscale(1);
+}
+h3 {
+    margin-top: 20px;
+}
+.descripcion {
+    padding: 50px;
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.7);
+    top: 300px;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: all 0.5s;
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    color: white;
+    text-shadow: 2px 2px 4px #080659;
+}
+.descripcion-card {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    color: white;
+    text-shadow: 2px 2px 4px #080659;
+    border-style: groove;
+    border-color: #6beef7dc;
+    border-radius: 35px;
+}
+.contenedor-card:hover .descripcion {
+    visibility: visible;
+    opacity: 1;
+    transition: all 0.5s;
+    transform: translateY(-300px);
+}
+
+.contenedor-card .print-maria {
+    transition: all 1s;
+    transform: scale(1.3);
+}
+
+.descripcion--title {
+    color:  #6beef7dc;
+}
+
+.descripcion--text {
+    margin: 20px 0;
+}
+
+.boton {
+    display: flex;
+    align-content: space-around;
+}
+
+
+.boton:hover {
+    color:#6beef7dc;
+}
+.botones-cto {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 5em;
+}
+
+.marquesina {
+    color: #080659;
+    text-shadow: 2px 2px 4px #be96dd;
+    font-family: Major Mono Display;
+    margin-top: 90px;
+}
 @media screen and (max-width: 480px) {
     .encabezado {
-        flex-direction: row-reverse;
+        flex-direction: column-reverse;
     }
 }
